Fix: overflow only on x axis

--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    overflow: scroll;
+    overflow-x: scroll;
 }
 
 .cards-row-gap {
