--- a/src/pages/WeatherInfo/WeatherInfo.module.css
+++ b/src/pages/WeatherInfo/WeatherInfo.module.css
@@ -1,5 +1,5 @@
 .weather-info {
     display: flex;
     gap: 30px;
-    overflow: scroll;
+    overflow-x: scroll;
 }
